implementation to testing and to building applications and tools based on
it (in Moqui Framework, Moqui Mantle, and in other Moqui-based projects).

This release includes:

- All of the great features of 1.0-preview1-3
- Changed UserAccount so that userId is internal/sequenced and a new
  username field is used for auth/login
- Some fixes so that Moqui will run in Java on Windows
- XML Screens
  - Screen form-list form-list-column support
  - Screen form-single field-layout support
  - Screen form-list pagination (defaults in search-form-inputs)

Notable features not yet implemented (for 1.0):

- XML Screens
  - Renderers for non-HTML output (XML, XSL-FO, CSV, etc, etc)
- Service Facade
  - Service mail handling (MCA rules, etc)
- Tools Screens
  - Entity
    - Entity Data UI (entity list, find on entity with delete, view entity
      record with related, create/update entity record with tabs for
      list/update/delete/add dependent entities)
    - Entity Data Import and Export screens
    - SQL Query Run/View
    - Database meta-data check/report against entity definitions
  - Scheduler (view scheduled services with cancel, add scheduled service)
  - Script Run (or groovy shell?)
  - Security screens (consider making Entity Data UI good enough for these)
    - UserAccount screens (find/delete, edit UA (with tabs for preferences,
      themes, login, history, visit history, groups, change password))
    - UserGroup screens (find/delete, edit (tab for users in group))
    - Artifact Group (find/delete, edit (tab for artifacts in group))
    - Authorization screen (find/delete, edit (tabs for record, service))
  - Artifact Info screens (with in/out references for all)

===========================================================================
Release 1.0-preview3 - 19 Mar 2011
===========================================================================

Moqui 1.0-preview3 introduces various features to automatically and easily