@@ -112,8 +112,6 @@
                             macro-template-location="classpath://template/DefaultScreenMacros.xslfo.ftl"/>
         <screen-text-output type="xml" mime-type="text/xml"
                             macro-template-location="classpath://template/DefaultScreenMacros.xml.ftl"/>
-        <screen-text-output type="csv" mime-type="text/csv"
-                            macro-template-location="classpath://template/DefaultScreenMacros.csv.ftl"/>
         -->
     </screen-facade>
 
