@@ -13,6 +13,7 @@ This Work includes contributions authored by David E. Jones, not as a
 <screen xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:noNamespaceSchemaLocation="http://moqui.org/xsd/xml-screen-1.0.xsd"
         default-menu-title="Artifact Hits">
+
     <transition name="csv">
         <default-response url="..">
             <parameter name="renderMode" value="csv"/>
@@ -20,16 +21,14 @@ This Work includes contributions authored by David E. Jones, not as a
             <parameter name="lastStandalone" value="true"/>
         </default-response>
     </transition>
+
     <actions>
         <entity-find entity-name="ArtifactHitBin" list="artifactHitBinList" limit="50">
             <search-form-inputs default-order-by="-binStartDateTime"/>
         </entity-find>
     </actions>
     <widgets>
-        <container>
-            <link url="csv" text="CSV Transition"/>
-            <link url="ArtifactHitBins?renderMode=csv&amp;pageNoLimit=true&amp;lastStandalone=true" url-type="plain" text="CSV URL"/>
-        </container>
+        <container><link url="csv" text="Get as CSV"/></container>
         <form-list name="ArtifactHitBins" list="artifactHitBinList">
             <row-actions>
                 <set field="averageTime" from="(totalTimeMillis/hitCount as BigDecimal).setScale(0,BigDecimal.ROUND_UP)"/>
